attached_assets/Pasted--venv-workspace-start-project-frontend-sh-Entrando-na-pasta-frontend-Iniciando-ser-1751040231611_1751040231612.txt
(.venv) ~/workspace$ ./start_project_frontend.sh
ðŸ“ Entrando na pasta frontend...
ðŸš€ Iniciando servidor React...

> frontend@1.0.0 start:frontend
> webpack serve

<i> [webpack-dev-server] [HPM] Proxy created: /accounts,/api  -> http://127.0.0.1:8000
<i> [webpack-dev-server] Project is running at:
<i> [webpack-dev-server] Loopback: http://localhost:3000/, http://[::1]:3000/
<i> [webpack-dev-server] On Your Network (IPv4): http://172.31.128.15:3000/
<i> [webpack-dev-server] Content not from webpack is served from '/home/runner/workspace/frontend/public' directory
<i> [webpack-dev-server] 404s will fallback to '/index.html'
<i> [webpack-dev-middleware] wait until bundle finished: /
asset bundle.js 6.52 MiB [emitted] (name: main)
asset 0a8db88f66225ec81689.png 333 KiB [emitted] [immutable] [from: src/assets/images/logo-02.png] (auxiliary name: main)
asset index.html 2.61 KiB [emitted]
1795 modules

ERROR in ./src/components/Fornecedores.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/frontend/src/components/Fornecedores.js: Unterminated regular expression. (161:2)

  159 | 
  160 | ```
> 161 | </replit_final_file>
      |   ^
    at constructor (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:363:19)
    at JSXParserMixin.raise (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:6612:19)
    at JSXParserMixin.readRegexp (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:6337:20)
    at JSXParserMixin.parseExprAtom (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11258:16)
    at JSXParserMixin.parseExprAtom (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:4779:20)
    at JSXParserMixin.parseExprSubscripts (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11026:23)
    at JSXParserMixin.parseUpdate (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:11011:21)
    at JSXParserMixin.parseMaybeUnary (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10991:23)
    at JSXParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10844:61)
    at JSXParserMixin.parseExprOpBaseRightExpr (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10931:34)
    at JSXParserMixin.parseExprOpRightExpr (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10926:21)
    at JSXParserMixin.parseExprOp (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10892:27)
    at JSXParserMixin.parseExprOps (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10853:17)
    at JSXParserMixin.parseMaybeConditional (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10826:23)
    at JSXParserMixin.parseMaybeAssign (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10779:21)
    at JSXParserMixin.parseExpressionBase (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10732:23)
    at /home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10728:39
    at JSXParserMixin.allowInAnd (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12370:16)
    at JSXParserMixin.parseExpression (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:10728:17)
    at JSXParserMixin.parseStatementContent (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12828:23)
    at JSXParserMixin.parseStatementLike (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12699:17)
    at JSXParserMixin.parseModuleItem (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12676:17)
    at JSXParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:13249:36)
    at JSXParserMixin.parseBlockBody (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:13242:10)
    at JSXParserMixin.parseProgram (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12555:10)
    at JSXParserMixin.parseTopLevel (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:12545:25)
    at JSXParserMixin.parse (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:14423:10)
    at parse (/home/runner/workspace/frontend/node_modules/@babel/parser/lib/index.js:14457:38)
    at parser (/home/runner/workspace/frontend/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/runner/workspace/frontend/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/runner/workspace/frontend/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/runner/workspace/frontend/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/runner/workspace/frontend/node_modules/gensync/index.js:261:32)
    at /home/runner/workspace/frontend/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/runner/workspace/frontend/node_modules/gensync/index.js:223:11)
 @ ./src/App.js 10:0-53 47:46-58
 @ ./src/index.js 3:0-24 7:45-48

ERROR in ./src/styles.css (./node_modules/css-loader/dist/cjs.js!./src/styles.css)
Module build failed (from ./node_modules/css-loader/dist/cjs.js):

SyntaxError

(279:1) /home/runner/workspace/frontend/src/styles.css Unexpected }

  277 |   padding-right: 2rem;
  278 | }
> 279 | }
      | ^
  280 | 
  281 | body {
 @ ./src/styles.css 8:6-100 20:17-24 24:7-21 50:25-39 51:36-47 51:50-64 55:6-65:7 56:54-65 56:68-82 62:42-53 62:56-70 64:21-28 75:0-70 75:0-70 76:22-29 76:33-47 76:50-64 53:4-66:5
 @ ./src/index.js 4:0-22

webpack 5.99.9 compiled with 2 errors in 5073 ms